network.yml
AWSTemplateFormatVersion: 2010-09-09
Mappings:
  InputStackName:
    writing-network-staging:
      CrossStackPrefix: writing-staging
      AllocationId: eipalloc-045e3ffeeefc12f83
    writing-network-production:
      CrossStackPrefix: writing-production
      AllocationId: eipalloc-045e3ffeeefc12f83
Conditions:
  IsStaging: !Equals [!Ref "AWS::StackName", writing-network-staging]
  IsProduction: !Equals [!Ref "AWS::StackName", writing-network-production]
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref AWS::StackName
  PublicSubnet1:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VPC
       CidrBlock: 10.0.0.0/24
       AvailabilityZone: !Select [0, !GetAZs ""]
       Tags:
         - Key: Name
           Value: !Sub ${AWS::StackName}-public1
  PublicSubnet2:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VPC
       CidrBlock: 10.0.1.0/24
       AvailabilityZone: !Select [1, !GetAZs ""]
       Tags:
         - Key: Name
           Value: !Sub ${AWS::StackName}-public2
  PrivateSubnet1:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VPC
       CidrBlock: 10.0.2.0/24
       AvailabilityZone: !Select [0, !GetAZs ""]
       Tags:
         - Key: Name
           Value: !Sub ${AWS::StackName}-private1
  PrivateSubnet2:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VPC
       CidrBlock: 10.0.3.0/24
       AvailabilityZone: !Select [1, !GetAZs ""]
       Tags:
         - Key: Name
           Value: !Sub ${AWS::StackName}-private2
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref AWS::StackName
  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  RouteTablePublic:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-public
  RouteTablePrivate1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-private1
  RouteTablePrivate2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-private2
  RoutePublic:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTablePublic
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  RoutePrivate1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTablePrivate1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway
  RoutePrivate2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTablePrivate2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway
  SubnetRouteTableAssociationPrivate1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref RouteTablePrivate1
  SubnetRouteTableAssociationPrivate2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref RouteTablePrivate2
  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !FindInMap [InputStackName, !Ref "AWS::StackName", AllocationId]
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}
  SubnetRouteTableAssociationPublic1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref RouteTablePublic
  SubnetRouteTableAssociationPublic2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref RouteTablePublic
  SecurityGroupWritingALB:
   Type: AWS::EC2::SecurityGroup
   Properties:
     GroupName: !Sub ${AWS::StackName}-writing-alb
     GroupDescription: !Sub ${AWS::StackName}-writing-alb
     VpcId: !Ref VPC
  SecurityGroupWritingALBItou:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref SecurityGroupWritingALB
      Description: opentone
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      CidrIp: 130.62.18.151/32
  SecurityGroupWritingECS:
   Type: AWS::EC2::SecurityGroup
   Properties:
     GroupName: !Sub ${AWS::StackName}-writing-ecs
     GroupDescription: !Sub ${AWS::StackName}-writing-ecs
     VpcId: !Ref VPC
  SecurityGroupWritingECSALB:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref SecurityGroupWritingECS
      Description: writing-alb
      IpProtocol: tcp
      FromPort: 3000
      ToPort: 3000
      SourceSecurityGroupId: !Ref SecurityGroupWritingALB
Outputs:
  VPC:
    Value: !Ref VPC
    Export:
      Name: !Join ["-", [!FindInMap [InputStackName, !Ref "AWS::StackName", CrossStackPrefix], "VPC"]]
  PublicSubnet1:
    Value: !Ref PublicSubnet1
    Export:
      Name: !Join ["-", [!FindInMap [InputStackName, !Ref "AWS::StackName", CrossStackPrefix], "PublicSubnet1"]]
  PublicSubnet2:
    Value: !Ref PublicSubnet2
    Export:
      Name: !Join ["-", [!FindInMap [InputStackName, !Ref "AWS::StackName", CrossStackPrefix], "PublicSubnet2"]]
  PrivateSubnet1:
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Join ["-", [!FindInMap [InputStackName, !Ref "AWS::StackName", CrossStackPrefix], "PrivateSubnet1"]]
  PrivateSubnet2:
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Join ["-", [!FindInMap [InputStackName, !Ref "AWS::StackName", CrossStackPrefix], "PrivateSubnet2"]]
  SecurityGroupWritingALB:
    Value: !Ref SecurityGroupWritingALB
    Export:
      Name: !Join ["-", [!FindInMap [InputStackName, !Ref "AWS::StackName", CrossStackPrefix], "SecurityGroupWritingALB"]]
  SecurityGroupWritingECS:
    Value: !Ref SecurityGroupWritingECS
    Export:
      Name: !Join ["-", [!FindInMap [InputStackName, !Ref "AWS::StackName", CrossStackPrefix], "SecurityGroupWritingECS"]]
